--- a/web/static/style.css
+++ b/web/static/style.css
@@ -2315,7 +2315,7 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   width: 50%;
 
   @media (max-width: 1300px) {
-      width: fit-content;
+    width: 100%;
   }
 }
 
@@ -2348,7 +2348,7 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   border-radius: 6px;
   display: flex;
   align-items: stretch;
-  min-width: 500px;
+  min-width: 340px;
 }
 
 a, .mat-card-title {
